<resources>
    <string name="app_name">Simple Storage</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="action_settings">Settings</string>
    <string name="item_id">ID</string>
    <string name="item_name">Name</string>
    <string name="item_quantity">Qty</string>
    <string name="item_extra">Extra</string>
    <string name="item_is_match">Is Match</string>
    <string name="item_full">Full</string>
    <string name="item_detail_new">New Item</string>
    <string name="item_detail_save">Save</string>
    <string name="item_detail_add">Add</string>
    <string name="item_detail_remove">Remove</string>
    <string name="item_detail_current_quantity">Current Quantity :</string>
    <string name="item_description_match_extra">Match Extra</string>

    <!-- Extra Stuff -->
    <string name="lorem_ipsum_16">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet massa aliquam, ultrices magna non.</string>
    <string name="lorem_ipsum_32">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sagittis tellus metus,
        vel commodo lectus dapibus ut. Etiam facilisis rutrum lorem.
        Vestibulum dapibus mi eget neque cursus posuere. Donec consequat risus nec.</string>
</resources>
