<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/itemDetailDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@null"
        android:src="@drawable/ic_clear_24dp"
        android:tint="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/table_margin_default"
            android:text="@string/item_detail_current_quantity"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/item_detail_default_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemDetailDialogQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/item_detail_default_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <NumberPicker
            android:id="@+id/itemDetailNumberPicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:divider="@color/colorPrimaryLight" />

        <NumberPicker
            android:id="@+id/itemDetailNumberPicker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <NumberPicker
            android:id="@+id/itemDetailNumberPicker3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/itemDetailDialogRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimary"
            android:text="@string/item_detail_remove"
            android:textColor="@color/white"
            android:textSize="@dimen/item_detail_default_text_size" />

        <Button
            android:id="@+id/itemDetailDialogAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/item_detail_add"
            android:textColor="@color/white"
            android:textSize="@dimen/item_detail_default_text_size" />

    </LinearLayout>

</LinearLayout>